# xpa

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: build.yml
cmd/xpa/: BUILD.bazel  main.go  main_test.go  output_format.go  xpa_command.go
parser/: BUILD.bazel  main.go  main_test.go
parser/xpath/: BUILD.bazel  listener.go  parser.go  parser_test.go  visitor.go
pkg/xpa/: BUILD.bazel  listener.go  parser.go  parser_test.go
pkg/xpa/XPath31/: README.md  xpath31_base_listener.go  xpath31_lexer.go  xpath31_listener.go  xpath31_parser.go
pkg/xpa/grammar/: BUILD.bazel  XPath31.g4
scripts/: maintain.sh
