load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_antlr//antlr:antlr4.bzl", antlr4 = "antlr")

antlr4(
    name = "grammar",
    srcs = ["grammar/XPath31.g4"],
    language = "Go",
    package = "xpath",
    visitor = True,
)

go_library(
    name = "xpath",
    srcs = [
        "listener.go",
        "parser.go",
        "visitor.go",
        ":grammar"
    ],
    importpath = "github.com/grahambrooks/xpath-parser/parser/xpath",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antlr_antlr4//runtime/Go/antlr",
    ],
)

go_test(
    name = "xpath_test",
    srcs = ["parser_test.go"],
    embed = [":xpath"],
)
